# notify-telegram

./: README.md  amvera.yml  db.sqlite3  main.py  pyproject.toml  start.sh
notice_telegram/: bot.py  db.sql  db.sqlite3  message_texts.py
